fix:tailwind css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body class="bg-cyan-300 p-10">
     <div class="bg-white max-w-xl mx-auto p-5 rounded shadow">
-      <blockquote>Knowledge Is Power</blockquote>
+      <blockquote class="font-semibold text-gray-600">
+        Knowledge Is Power
+      </blockquote>
     </div>
 
     <script type="module" src="./assets/js/main.js"></script>
