--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body class="bg-cyan-300 p-10">
     <div class="bg-white max-w-xl mx-auto p-5 rounded shadow">
-      <blockquote class="font-semibold text-gray-600">
-        Knowledge Is Power
+      <blockquote class="font-semibold text-gray-600 text-center">
+        " Knowledge Is Power "
       </blockquote>
     </div>
 
