--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
   <body class="bg-cyan-300 p-10">
     <div class="bg-white max-w-xl mx-auto p-5 rounded shadow">
       <blockquote class="font-semibold text-gray-600 text-center">
-        " Knowledge Is Power "
+        " 'Knowledge Is Power' "
       </blockquote>
+
+      <div class="text-center pt-5">
+        <button class="bg-blue-400 p-3 rounded text-white font-semibold">
+          Click Here
+        </button>
+      </div>
     </div>
 
     <script type="module" src="./assets/js/main.js"></script>
